# vault_mind

./: .env.example  .gitignore  CLAUDE.md  DEVIN-PIVOT-SPEC.md  README.md  SPEC.md  WORKSTREAMS.md  docker-compose.yml  package.json  pyproject.toml  register_agents.py  run_orchestrator.py
.claude/: settings.json
.vaultmind/hooks/: on_session_end.py  on_stop.py
fixtures/: queue_item.json  scribe_result.json  transcript.jsonl
fixtures/vault/: Constraints.md  IntentLog.md  ProjectGoal.md  SessionState.md  TechStack.md  VaultIndex.md
scripts/: start.ps1  start.sh
tests/: test_agent_bridge.py  test_bucket2_parity.py  test_bucket3_secrets.py  test_bucket5_skeleton.py  test_concurrent_write.py  test_integration_handoff.py  test_integration_pipeline.py  test_integration_secrets.py  test_integration_session.py  test_p1_cursor.py  test_p1_producer.py  test_p1_reader.py  test_p1_session_state.py  test_p2_notecreator.py  test_p2_scribe.py  test_p3_connector.py  test_p3_evaluator.py  test_p3_handoff.py  test_p3_orchestrator.py  test_watcher_arize.py
vault-mind-orchestrate/: .env.example  .gitignore  Makefile  README.md  agent.py  requirements.txt
vault-mind-orchestrate/tests/: test_agentverse_chat.py
vaultmind/: arize_init.py  contracts.py  secret-patterns.json  secrets.py  watcher.py
vaultmind/connector/: __init__.py
vaultmind/evals/: __init__.py  pipeline_eval_prompt.md
vaultmind/handoff/: __init__.py
vaultmind/hooks/: claude_settings.json  pre-commit.sh  (+1 more)
webapp/: .env.local  agent_bridge.py  package-lock.json  package.json  requirements-bridge.txt  types.ts
(+43 files in other folders)
