[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "vaultmind"
version = "0.1.0"
description = "Persistent, structured project memory in Obsidian-compatible Markdown"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "redis>=5.0",
    "anthropic>=0.30",
    "arize-otel>=0.0.1",
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["vaultmind*"]

[tool.setuptools.package-data]
vaultmind = ["*.json", "evals/*.md"]
